AWMIPS测试版设计完毕

--- a/materials/龙芯杯参赛记录.md
+++ b/materials/龙芯杯参赛记录.md
@@ -32,12 +32,10 @@ github上宝贵的参赛经验：https://github.com/Silverster98/bit_nscscc_sugg
 
 - 基础五级流水线CPU
 - 处理控制与数据依赖命令
-- 实现龙芯杯要求的非特权指令
-- 访存不在单周期内完成
-- 流水化的乘除法器
+- 实现龙芯杯个人赛发布包指令
+- 支持UART接口通信
 - 基于两位饱和计数器的分支预测器
-- 基于FIFO的指令缓存和数据缓存
-- 测试样例编写
+- 基于FIFO的指令缓存(icache)和数据缓存(dcache)
 
 ### 进阶要求
 
